# datasette-query-assistant

./: README.md  pyproject.toml
datasette_assistant/: __init__.py
datasette_assistant/templates/: assistant.html
datasette_query_assistant/: __init__.py
datasette_query_assistant/templates/: assistant.html  query_assistant.html
tests/: conftest.py  test_assistant.py  test_query_assistant.py
tests/cassettes/test_query_assistant/: test_database_assistant_page.yaml  test_table_assistant_page.yaml
