[project]
name = "datasette-query-assistant"
version = "0.1a5"
description = "Query databases and tables with AI assistance"
readme = "README.md"
authors = [{name = "Simon Willison"}]
license = "Apache-2.0"
classifiers=[
    "Framework :: Datasette"
]
requires-python = ">=3.10"
dependencies = [
    "datasette>=1.0a21",
    "llm>=0.22",
    "markdown2",
]

[project.urls]
Homepage = "https://github.com/datasette/datasette-query-assistant"
Changelog = "https://github.com/datasette/datasette-query-assistant/releases"
Issues = "https://github.com/datasette/datasette-query-assistant/issues"
CI = "https://github.com/datasette/datasette-query-assistant/actions"

[project.entry-points.datasette]
query_assistant = "datasette_query_assistant"

[project.optional-dependencies]
test = ["llm-openai-plugin", "inline-snapshot", "pytest", "pytest-asyncio", "pytest-recording", "sqlite-utils"]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.setuptools.package-data]
datasette_query_assistant = ["templates/*"]
